src/objects/pse__Assignment__c.object
<CustomObject>
    <fields>
        <fullName>pse__ERP_Absence_Correlation_Id__c</fullName>
        <description>This records the absence request correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the absence request correlation key used within the erp system.</inlineHelpText>
        <label>Foundations Absence Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Schedule_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Schedule Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Schedule__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_EVA_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the EVAs are not calculated for this assignment.</description>
        <inlineHelpText>When selected, the EVAs are not calculated for this assignment.</inlineHelpText>
        <label>Exclude from EVA Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_External_Calendar_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the assignment is not synced with an external calendar and the existing calendar events are also deleted if any.</description>
        <inlineHelpText>When selected, the assignment is not synced with an external calendar and the existing calendar events are also deleted if any.</inlineHelpText>
        <label>Exclude from External Calendar Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Tc_Exp_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the assignment is excluded from timecard and expense rollup calculation.</description>
        <inlineHelpText>When selected, the assignment is excluded from timecard and expense rollup calculation.</inlineHelpText>
        <label>Exclude from Timecard Expense Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this assignment is excluded from Utilization calculations.</description>
        <inlineHelpText>When selected, this assignment is excluded from Utilization calculations.</inlineHelpText>
        <label>Exclude from Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</description>
        <inlineHelpText>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Planners__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, excludes the assignment from Work Planners and from the Resource
		and Project Planners. Any excluded assignments are omitted from totals calculations in all
		planners and from color coding in the Resource and Project Planners.</description>
        <inlineHelpText>When selected, excludes the assignment from the Resource and Project Planners. Any excluded assignments are not included in totals calculations and color coding in Planners.</inlineHelpText>
        <label>Exclude from Planners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies how to convert hours to days for time cards against this assignment</description>
        <inlineHelpText>Specifies how to convert hours to days for time cards against this assignment</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</description>
        <inlineHelpText>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Nick_Name__c</fullName>
        <description>Alias for the assignment name.</description>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Expense Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Expense Group For Assignments</relationshipLabel>
        <relationshipName>Override_ExpGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Expense Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Expense Practice For Assignments</relationshipLabel>
        <relationshipName>Override_ExpPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Expense Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Expense Region For Assignments</relationshipLabel>
        <relationshipName>Override_ExpRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Audit_Notes__c</fullName>
        <description>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Cost Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Cost Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Cost Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Revenue Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Revenue Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Revenue Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>User editable number of hours originally planned for this assignment. NOTE: this field is user maintained and will not be updated automatically.</description>
        <inlineHelpText>The number of hours originally planned for this assignment. This value is independent of the actual number of hours scheduled.</inlineHelpText>
        <label>Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <description>Planned Hours * Bill Rate</description>
        <formula>pse__Planned_Hours__c * pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Hours * Bill Rate</inlineHelpText>
        <label>Planned Revenue (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projected_Revenue__c</fullName>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Cost_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Resource Cost Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource Request Lookup populated only when assignment is created from a resource request.</description>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Biomarker Lead</fullName>
                </value>
                <value>
                    <fullName>Biostatistics</fullName>
                </value>
                <value>
                    <fullName>CMC Lead</fullName>
                </value>
                <value>
                    <fullName>CMC Support</fullName>
                </value>
                <value>
                    <fullName>COE Medic</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>CSDD Lead</fullName>
                </value>
                <value>
                    <fullName>Data and Analytics Lead</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Functional Lead</fullName>
                </value>
                <value>
                    <fullName>IQB Regulatory Lead</fullName>
                </value>
                <value>
                    <fullName>IQB Regulatory Submissions Lead</fullName>
                </value>
                <value>
                    <fullName>IQB Regulatory Support</fullName>
                </value>
                <value>
                    <fullName>Labeling Lead</fullName>
                </value>
                <value>
                    <fullName>Labeling Support</fullName>
                </value>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>Local Regulatory Strategist</fullName>
                </value>
                <value>
                    <fullName>Medical Communications</fullName>
                </value>
                <value>
                    <fullName>Medical Lead</fullName>
                </value>
                <value>
                    <fullName>Medical Safety Advisor</fullName>
                </value>
                <value>
                    <fullName>Medical Writer</fullName>
                </value>
                <value>
                    <fullName>Non Clin/Tox Lead</fullName>
                </value>
                <value>
                    <fullName>Non Clin/Tox Support</fullName>
                </value>
                <value>
                    <fullName>PK/PD SME</fullName>
                </value>
                <value>
                    <fullName>PK/PD Writer</fullName>
                </value>
                <value>
                    <fullName>Project Advisor</fullName>
                </value>
                <value>
                    <fullName>Project Lead</fullName>
                </value>
                <value>
                    <fullName>Project Lead - Senior</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Schedule_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Schedule Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Send_to_Third_Party_Expenses_Application__c</fullName>
        <description>Controls whether or not the assignment is sent to a third-party expenses application.</description>
        <formula>AND(pse__Resource__r.pse__Is_Resource__c , pse__Resource__r.pse__Is_Resource_Active__c , NOT(pse__Project__r.pse__Closed_for_Expense_Entry__c),  NOT(pse__Closed_for_Expense_Entry__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls whether or not the assignment is sent to a third-party expenses application.</inlineHelpText>
        <label>Send to Third-Party Expenses Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Methodologies_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the related project are shown.</inlineHelpText>
        <label>Show Assignment Methodologies Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Milestones_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project are shown.</inlineHelpText>
        <label>Show Assignment Milestones Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Phases_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown.</inlineHelpText>
        <label>Show Assignment Phases Only</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>